# vidseq

./: .gitignore  ARCHITECTURE_REVIEW.md  pyproject.toml
design_docs/: architecture_review.md  class_diagram.md  essential_info.md  information_architecture.md  pipeline_steps.md  project_structure.md
design_docs/user_flows/: analyze_behavior_model.md  behavior_modeling.md  dimensionality_reduction.md  egocentric_alignment.md  open_project_first_time.md  open_recent_project.md  project_initialization.md  segmentation.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: reset.css
frontend/src/components/: AppNavbar.vue  FilePickerModal.vue  FirstFramesView.vue  JobsList.vue  NewProject.vue  RecentProjects.vue  SegmentationPromptModal.vue  VideoDetail.vue  VideoOverlay.vue  VideoPipeline.vue  VideoTimeline.vue
frontend/src/composables/: usePromptStorage.ts  useSAM3Session.ts  useSegmentation.ts  useSegmentationSession.ts  useUNet.ts  useVideoPlayback.ts  useYOLO.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: project.ts
frontend/src/views/: HomeView.vue  JobsView.vue  ProjectView.vue
vidseq/: __init__.py  cli.py  database.py  sam3streaming.py  server.py
vidseq/api/: dependencies.py
vidseq/api/routes/: filesystem.py  jobs.py  projects.py  segmentation.py  unet.py  videos.py  yolo.py
vidseq/jobs/: runner.py
vidseq/models/: __init__.py  conditioning_frame.py  project.py  project_db.py  prompt.py  registry.py  utils.py  video.py
vidseq/schemas/: __init__.py  filesystem.py  job.py  project.py  segmentation.py  video.py
vidseq/services/: __init__.py  conditioning_service.py  database_manager.py  mask_service.py  mask_storage.py  prompt_service.py  prompt_storage.py  sam2_service.py  sam2_worker.py  sam2streaming.py  sam3_service.py  sam3_worker.py  sam3streaming.py  segmentation_service.py  unet_service.py  unet_worker.py  video_metadata.py  video_service.py  yolo_dataset.py  yolo_service.py
