[project]
name = "vidseq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.121.1",
    "platformdirs>=4.5.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "torch",
    "torchvision",
    "sam3",
    "opencv-python>=4.11.0.86",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
vidseq = "vidseq.cli:main"

[tool.setuptools]
packages = ["vidseq"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
sam3 = { git = "https://github.com/facebookresearch/sam3.git" }
