[project]
name = "vidseq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.121.1",
    "platformdirs>=4.5.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "torch",
    "torchvision",
    "opencv-python>=4.11.0.86",
    "einops>=0.8.1",
    "decord>=0.6.0",
    "h5py>=3.11.0",
    "pillow>=10.0.0",
    "httpx>=0.28.1",
    "segmentation-models-pytorch>=0.3.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
vidseq = "vidseq.cli:main"

[tool.setuptools]
packages = ["vidseq"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
